--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,6 @@
 @layer base {
     body {
         @apply min-h-screen bg-[#0a0e17] text-white;
-        @apply px-20;
+        @apply px-8 md:px-16 lg:px-20;
     }
 }
